# morphx

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PPT-GENERATOR  README.md  my_presentation.pptx  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: workflow.yaml
morphx/: 1_🏠_Home.py  __init__.py  main.py
morphx/configs/: __init__.py  models.py  models_configs.json  pages.py  transcriptions.py
morphx/inputs/: __init__.py  ppt_input_content.py
morphx/models/: __init__.py  model_loaders.py
morphx/pages/: 2_📝_Metadata.py  3_📄_File_to_Markdown.py  4_🎙️_Audio_Transcription.py  home.py
morphx/tools/: deepseek_OCR.ipynb  file_conversion.py  file_ocr.py  genppt.py  transcriptions.py
morphx/utils/: __init__.py  ppt_error_handling.py  ppt_utils.py  transcriptions.py  utils.py  whisper_utils.py
