[build-system]
requires = ["setuptools==80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "morphx"
version = "0.0.1"
description = "MorphX is a Streamlit-based tool for modifying metadata, converting files to Markdown, transcribing audio and more, all from an intuitive web interface. 🚀"
authors = [
    {name = "Daniel Bazo Correa", email = "none@none.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = "==3.11.*"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python"]
dependencies = [
    "noisereduce>=3.0.3",
    "openai-whisper==20250625",
    "st-copy==1.1.2",
    "streamlit==1.50.0",
    "watchdog==6.0.0",
    "numpy==1.26.4; sys_platform == 'darwin'",
    "numpy==2.3.3; sys_platform != 'darwin'",
    "accelerate==1.10.1",
    "python-pptx==1.0.2",
    "transformers[torch]==4.57.0",
]

[tool.uv]
default-groups = "all"
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[dependency-groups]
pipeline = [
    "bandit==1.8.6",
    "complexipy==4.2.0",
    "mypy==1.18.2",
    "pytest==8.4.2",
    "pytest-order==1.3.0",
    "ruff==0.13.2",
    "isort==6.0.1",
    "nbqa==1.9.1"
]

[tool.setuptools.packages.find]
include = ["morphx*"]
exclude = ["tests*", "docs*", "*.egg-info*"]

[tool.ruff]
line-length = 88
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E203"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
force-to-top = ["morphx"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "^(build|dist|venv)",
    ".venv/"
]
cache_dir = "/dev/null"

[tool.isort]
known_first_party = ["morphx"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "Standard libraries"
import_heading_thirdparty = "3pps"
import_heading_firstparty = "Own modules"
line_length = 88
